[package]
name = "axum-github-webhook-extract"
version = "0.1.2"
edition = "2021"
authors = ["Naitik Shah <n@daaku.org>"]
description = "A library to secure GitHub Webhooks and extract JSON event payloads in Axum."
readme = "readme.md"
repository = "https://github.com/daaku/axum-github-webhook-extract"
keywords = ["axum", "github"]
categories = []
license = "MIT"

[dependencies]
axum = "0.6"
hex = "0.4"
hmac-sha256 = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
subtle = "2.5"

[dev-dependencies]
hyper = { version = "0.14", default-features = false }
tower = { version = "0.4", default-features = false }
tokio = { version = "1.28", features = ["macros"] }
