[package]
name = "axum-github-webhook-extract"
version = "0.2.0"
edition = "2021"
authors = ["Naitik Shah <n@daaku.org>"]
description = "A library to secure GitHub Webhooks and extract JSON event payloads in Axum."
readme = "readme.md"
repository = "https://github.com/daaku/axum-github-webhook-extract"
keywords = ["axum", "github"]
categories = []
license = "MIT"

[dependencies]
axum = "0.8.1"
hex = "0.4"
hmac-sha256 = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
subtle = "2.5"
tracing = "0.1.41"

[dev-dependencies]
http-body-util = { version = "0.1.0" }
hyper = { version = "1.0.1", default-features = false }
tower = { version = "0.5", default-features = false }
tokio = { version = "1.35", features = ["macros"] }
